*** Some bugfixes, including CMUCL support and better key event handling.
*** Native implementation of context menus, list panes, label panes, and
    option panes.
** Improvement: Added new editor substrate ("Drei").
** Improvement: Improved the pathname presentation methods considerably.
** specification compliance: DELETE-GESTURE-NAME function now implemented.

* Changes in mcclim-0.9.3 "All Souls' Day" relative to 0.9.2:
** backend improvement: The Null backend now registers itself in the
   server search path
** improvement: with-output-as-gadget now sets the correct cursor
   position when incremental redisplay is active.
** specification compliance: INVOKE-WITH-NEW-OUTPUT-RECORD's argument
   list now is the same as the one in the Franz CLIM user guide.
** improvement: The text field cursor is now a solid block again.
** backend improvement: the PostScript backend now outputs correct EPS
** improvement: Graph nodes can now be dragged
** improvement: Possibilities when reading from
   COMPLETE-FROM-GENERATOR are now sorted alphabetically.
** new experimental backend: gtkairo (loads on SBCL, CMUCL and SCL):
   Uses GTK+ for gadgets and cairo for rendering graphics.
** Bug fix: incremental-redisplay does no longer leak memory
** improvement: incremental-redisplay is now a little faster
** Bug fix: Invisible text cursors no longer leave a dangling space
   behind the text output record
** improvement: commands whose names are shadowed in child command
   tables are now suggested in preference to their parents.
** Bug fix: (setf stream-cursor-position) and output record replay on
   encapsulating streams work now.
** Bug fix: Invoking command menu items in frames with no interactor
   works now.
** Bug fix: DESTROY-PORT removes the port even if an error occurs
   while closing the port
** Bug fix: make-process now sets the process name on SBCL
** specification compliance: MENU-CHOOSE now supports almost all
   features demanded in the CLIM 2.0 specification.