@@ -9,6 +9,8 @@
 ** Improvement: Added new editor substrate ("Drei").
 ** Improvement: Improved the pathname presentation methods considerably.
 ** specification compliance: DELETE-GESTURE-NAME function now implemented.
+** specification compliance: PRESENTATION-TYPE-SPECIFIER-P presentaion
+   function now implemented.
 
 * Changes in mcclim-0.9.3 "All Souls' Day" relative to 0.9.2:
 ** backend improvement: The Null backend now registers itself in the
